# ejerciciosPrograDos

./: CMakeLists.txt  README.md
Practica Semanal/: Animal.cpp  Animal.h  CMakeLists.txt  Libro.cpp  Libro.h  Mamifero.cpp  Mamifero.h  Perro.cpp  Perro.h  Practica_Semanal.md  main.cpp
Practica Semanal 1/: Autor.cpp  Autor.h  CMakeLists.txt  Mamifero.h  Perro.h  main.cpp
Practica Semanal 3/: CMakeLists.txt  Figura.h  IOperacion.h  Practica_Semanal.md  Rectangulo.h  Suma.h  main.cpp
Practica Semanal 4/: Archivo.h  CMakeLists.txt  Consola.h  IDispositivoSalida.h  Impresora.h  Practica_Semanal.md  division_cero.h  main.cpp
Semana 1/: Automovil.h  Barco.h  CMakeLists.txt  Circulo.h  Curso.h  Estudiante.h  Sesion_01_Estudiantes.md  Sesion_02_Estudiantes.md  Vehiculo.h  base.cpp  base.h  derivada1.h  derivada2.h  main.cpp
Semana 3/: CMakeLists.txt  IDispositivoSalida.h  Sesion_01_Estudiantes.md
Semana 3 Sesion 1/: Archivo.h  Consola.h  Impresora.h  main.cpp
Semana 3 Sesion 2/: CMakeLists.txt  Calculadora.h  Cuadrado.h  INotificador.h  Imprimir.h  NotificadorArchivo.h  NotificadorConsola.h  Resta.h  Sesion_02_Estudiantes.md  calculadoraIVA.h  main.cpp
Semana 4 Sesion 1/: Archivo.h  CMakeLists.txt  IDispositivoSalida.h
Semana 4 Sesion 2/: CMakeLists.txt  Perro.h  Sesion_02_Estudiantes.md  division_cero.h  error_matematico.h  error_negativo.h  main.cpp
Semana 5 Semanal/: Azucar.h  Bebida.h  BebidaDecorador.h  CMakeLists.txt  Cafe.h  Leche.h  Practica_Semanal.md  Rectangulo.h  RectanguloMal.h  main.cpp
Semana 5 Sesion 1/: CMakeLists.txt  CuadradoMal.h  Figura.h  (+2 more)
(+8 files in other folders)
