cmake_minimum_required(VERSION 4.1)
project(Semana_5_Semanal)

set(CMAKE_CXX_STANDARD 20)

add_executable(Semana_5_Semanal main.cpp
        Figura.h
        Cuadrado.h
        Rectangulo.h
        Cafe.h
        Bebida.h
        Leche.h
        Azucar.h
        BebidaDecorador.h
        RectanguloMal.h
        CuadradoMal.h)
